--- a/package.json
+++ b/package.json
@@ -1,5 +1,73 @@
 {
+  "name": "network-certification-system",
+  "version": "1.0.0",
+  "description": "Sistema completo de certificación de redes con frontend React y backend Node.js",
+  "main": "network-certification-backend.js",
+  "scripts": {
+    "start": "node network-certification-backend.js",
+    "dev": "nodemon network-certification-backend.js",
+    "migrate": "node backend-database-migration.js up",
+    "migrate:rollback": "node backend-database-migration.js down",
+    "seed": "node backend-seed-data.js seed",
+    "seed:clean": "node backend-seed-data.js clean",
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "docker:build": "docker build -t network-cert-backend .",
+    "docker:run": "docker run -p 3000:3000 network-cert-backend",
+    "db:status": "node backend-database-migration.js status",
+    "verify": "node scripts/verify-deployment.js"
+  },
+  "keywords": [
+    "network",
+    "certification",
+    "react",
+    "nodejs",
+    "postgresql",
+    "api"
+  ],
+  "author": "Fernando Forero",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "pg": "^8.11.3",
+    "multer": "^1.4.5-lts.1",
+    "csv-parser": "^3.0.0",
+    "pdfkit": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "joi": "^17.11.0",
+    "celebrate": "^15.0.1",
+    "winston": "^3.11.0",
+    "compression": "^1.7.4",
+    "express-fileupload": "^1.4.3"
+  },
   "devDependencies": {
-    "@types/react": "^19.1.12"
-  }
+    "@types/react": "^19.1.12",
+    "@types/node": "^20.10.0",
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-node": "^11.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/network-certification-system.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/network-certification-system/issues"
+  },
+  "homepage": "https://github.com/your-username/network-certification-system#readme"
 }
